# px4_control

./: .gitignore  .gitmodules  LICENSE  README.md
model_identification/old_scripts/: data_for_model_ID.m
model_identification/scripts/: costFunction.m  data_for_model_ID.m  data_for_model_ID_from_sim.m  droneModel.m  getMRModel.m  get_multirotor_model.m  loadFlightData.m  loadFlightDataSim.m  load_data_example.m  modelID.m  plot_model.m  save_model.m
nmpc/: CMakeLists.txt  package.xml
nmpc/cfg/: setpoints.yaml
nmpc/include/nmpc/: acados_nmpc.h  master_control.h  pid.h  px4_control.h  px4_nmpc.h  px4_pilot.h  trajectory_generation.h
nmpc/launch/: master_control.launch  px4_nmpc.launch  px4_pilot.launch  traj_gen.launch
nmpc/scripts/: acados_ocp_nlp.json  acados_settings.py  acados_settings_alt.py  back_n_forth_traj.py  camera_to_drone.py  drone_model.py  drone_model_alt.py  fake_gps.py  joy_control.py  load_test_traj.py  push_setpoint.py  px4_nmpc_node.py  spiral_traj.py  square_traj.py  state_machine.py  test_model_and_solver.py  test_model_and_solver_alt.py  test_nmpc.py  test_python_nmpc.py  test_single_input.py
nmpc/src/: acados_nmpc.cc  master_control.cc  px4_control.cc  px4_control_node.cc  px4_nmpc.cc  px4_nmpc_node.cc  px4_pilot.cc  px4_pilot_node.cc  trajectory_generation.cc
px4_control_msgs/: CMakeLists.txt  package.xml
px4_control_msgs/msg/: DroneState.msg  DroneStateMarker.msg  Setpoint.msg  Trajectory.msg
state_estimation/: CMakeLists.txt  package.xml
state_estimation/cfg/: drone_dic_parameters.yaml  f550_parameters.yaml  iris_sitl_parameters.yaml  model_parameters.yaml  observer_parameters.yaml
state_estimation/include/state_estimation/: common.h  common.hpp  state_observer.h  state_observer_eskf.h  state_observer_w_marker.h
state_estimation/include/state_estimation/sensors/: base_sensor.h  base_sensor_eskf.h  marker.h  marker_sensor.h  mavros_global_local.h  mavros_odometry.h  mavros_odometry_eskf.h  odometry_sensor.h  pose_sensor.h
state_estimation/launch/: state_observer.launch  state_observer_marker.launch
state_estimation/msg/: DroneState.msg
state_estimation/src/: state_observer.cc  state_observer_eskf.cc  state_observer_eskf_node.cc  state_observer_node.cc  state_observer_w_marker.cc  state_observer_w_marker_node.cc
